--- a/pom.xml
+++ b/pom.xml
@@ -409,7 +409,7 @@
                             <!--<exclude>doc/**/*.*</exclude>-->
                             <!--<exclude>conf/**/*.*</exclude>-->
                             <!--<exclude>**/*.txt</exclude>-->
-                            <!--<exclude>**/*.csv</exclude>-->
+                            <!--<exclude>**/*.tfr</exclude>-->
                             <!--<exclude>**/*.tsv</exclude>-->
                             <!--<exclude>**/*.rst</exclude>-->
                             <!--<exclude>**/*.tpl</exclude>-->
