Cleaned up .gitignore file , removed extra "tf" folder and Renamed spark-tf-core to core, Rename namespace (#10)
* clean up and formatting

* formatting testcases

* upgraded to scala 2.11.8

* update readme

* Clean up .gitignore file, remove tf folder inside test folder

* Rename spark-tf-core to core, and update all references

* Remove core module, add License file and make pom changes

* Renaming namespace, update all files with new namespace

* Fix custom schema, correct pom

--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,6 @@
-*~
-atlassian-ide-plugin.xml
-/bin
-build
-BUILD
-.cache
-*.class
-.classpath
-.coverage
-cscope*
-data
-dependency-reduced-pom.xml
-dev.conf
-*.diff
-dist
-download
-.ensime*
-git
 .idea
-*/.idea/tasks.xml
-*/.idea/workspace.xml
 *.iml
 *.jar
-largegit.sh
-make.sh
-.metadata*
-*.orig
-*parse*.sh
-*partition*.sh
-*.patch
-patches-*
-pig_*.log
-.project
-*.pyc
-/python/cover/
-/python/.coverage
-/python/nosetests.xml
-integration-tests/tests/*_generated.py*
-integration-tests/tests/sandbox
-integration-tests/tests/pytest-report
-.Rhistory
-scratch.py
-sdhu.xml
-stats
-*.swo
-*.swp
-tags
-TAGS
 target
-*.tar.gz
-testgraphs
-virtpy
-*.zip
-/zinc-0.3.7
-*.log
-**/metastore_db*
-**/*egg-info*
-scoring
-graphframes
-*.coverage*
-scoring-pipelines
 tf-sandbox
-spark-tensorflow-connector.iml
-sspark-tf-core/park-tf-core.iml
+spark-warehouse/
